--- a/Brainf_ck-sharp.UWP/Styles/TextStyles.xaml
+++ b/Brainf_ck-sharp.UWP/Styles/TextStyles.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+
     <!--Font icon-->
     <x:Double x:Key="FontIconTextBlockSize">16</x:Double>
     <Style TargetType="TextBlock" x:Key="FontIconTextBlockStyle">
@@ -187,7 +187,8 @@
                                 Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="{TemplateBinding BorderThickness}"
-                                Grid.ColumnSpan="2" />
+                                Grid.ColumnSpan="2"
+                                Grid.RowSpan="1" />
                         <ContentPresenter x:Name="HeaderContentPresenter"
                                           x:DeferLoadStrategy="Lazy"
                                           Visibility="Collapsed"
