--- a/Brainf_ck-sharp.UWP/Styles/ButtonStyles.xaml
+++ b/Brainf_ck-sharp.UWP/Styles/ButtonStyles.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:customCommandBar="using:Brainf_ck_sharp_UWP.UserControls.InheritedControls.CustomCommandBar">
 
     <!-- Default style for Windows.UI.Xaml.Controls.Button -->
     <SolidColorBrush x:Key="ButtonPointerOverLightBrush" Color="#14FFFFFF"/>
@@ -283,8 +284,8 @@
         </Setter>
     </Style>
 
-    <!-- Default style for Windows.UI.Xaml.Controls.AppBarButton -->
-    <Style TargetType="AppBarButton" x:Key="ColoredAppbarButton">
+    <!-- Default style for customCommandBar:CustomCommandBarButton -->
+    <Style TargetType="customCommandBar:CustomCommandBarButton" x:Key="ForegroundCustomCommandBarButton">
         <Setter Property="Background" Value="{ThemeResource AppBarButtonBackground}" />
         <Setter Property="Foreground" Value="{ThemeResource AppBarButtonForeground}" />
         <Setter Property="BorderBrush" Value="{ThemeResource AppBarButtonBorderBrush}" />
@@ -297,15 +298,15 @@
         <Setter Property="AllowFocusOnInteraction" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="AppBarButton">
+                <ControlTemplate TargetType="customCommandBar:CustomCommandBarButton">
                     <Grid x:Name="Root"
-                          MinWidth="{TemplateBinding MinWidth}"
-                          MaxWidth="{TemplateBinding MaxWidth}"
-                          Background="{TemplateBinding Background}"
-                          BorderBrush="{TemplateBinding BorderBrush}"
-                          BorderThickness="{TemplateBinding BorderThickness}">
+                        MinWidth="{TemplateBinding MinWidth}"
+                        MaxWidth="{TemplateBinding MaxWidth}"
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}">
                         <Grid.Resources>
-                            <Style x:Name="LabelOnRightStyle" TargetType="AppBarButton">
+                            <Style x:Name="LabelOnRightStyle" TargetType="customCommandBar:CustomCommandBarButton">
                                 <Setter Property="Width" Value="NaN" />
                             </Style>
                         </Grid.Resources>
@@ -405,6 +406,8 @@
                                     <VisualState.Setters>
                                         <Setter Target="Root.Background" Value="{ThemeResource AppBarButtonBackgroundPointerOver}"/>
                                         <Setter Target="Root.BorderBrush" Value="{ThemeResource AppBarButtonBorderBrushPointerOver}"/>
+                                        <Setter Target="TextLabel.Foreground" Value="{ThemeResource AppBarButtonForegroundPointerOver}"/>
+                                        <Setter Target="OverflowTextLabel.Foreground" Value="{ThemeResource AppBarButtonForegroundPointerOver}"/>
                                     </VisualState.Setters>
                                     <Storyboard>
                                         <PointerUpThemeAnimation Storyboard.TargetName="OverflowTextLabel" />
@@ -414,6 +417,8 @@
                                     <VisualState.Setters>
                                         <Setter Target="Root.Background" Value="{ThemeResource AppBarButtonBackgroundPressed}"/>
                                         <Setter Target="Root.BorderBrush" Value="{ThemeResource AppBarButtonBorderBrushPressed}"/>
+                                        <Setter Target="TextLabel.Foreground" Value="{ThemeResource AppBarButtonForegroundPressed}"/>
+                                        <Setter Target="OverflowTextLabel.Foreground" Value="{ThemeResource AppBarButtonForegroundPressed}"/>
                                     </VisualState.Setters>
                                     <Storyboard>
                                         <PointerDownThemeAnimation Storyboard.TargetName="OverflowTextLabel" />
@@ -437,6 +442,9 @@
                                     <VisualState.Setters>
                                         <Setter Target="Root.Background" Value="{ThemeResource AppBarButtonBackgroundPointerOver}"/>
                                         <Setter Target="Root.BorderBrush" Value="{ThemeResource AppBarButtonBorderBrushPointerOver}"/>
+                                        <Setter Target="Content.Foreground" Value="{ThemeResource AppBarButtonForegroundPointerOver}"/>
+                                        <Setter Target="TextLabel.Foreground" Value="{ThemeResource AppBarButtonForegroundPointerOver}"/>
+                                        <Setter Target="OverflowTextLabel.Foreground" Value="{ThemeResource AppBarButtonForegroundPointerOver}"/>
                                     </VisualState.Setters>
                                     <Storyboard>
                                         <PointerUpThemeAnimation Storyboard.TargetName="ContentRoot" />
@@ -446,6 +454,9 @@
                                     <VisualState.Setters>
                                         <Setter Target="Root.Background" Value="{ThemeResource AppBarButtonBackgroundPressed}"/>
                                         <Setter Target="Root.BorderBrush" Value="{ThemeResource AppBarButtonBorderBrushPressed}"/>
+                                        <Setter Target="Content.Foreground" Value="{ThemeResource AppBarButtonForegroundPressed}"/>
+                                        <Setter Target="TextLabel.Foreground" Value="{ThemeResource AppBarButtonForegroundPressed}"/>
+                                        <Setter Target="OverflowTextLabel.Foreground" Value="{ThemeResource AppBarButtonForegroundPressed}"/>
                                     </VisualState.Setters>
                                     <Storyboard>
                                         <PointerDownThemeAnimation Storyboard.TargetName="ContentRoot" />
@@ -476,39 +487,39 @@
                                 <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
                             <Viewbox x:Name="ContentViewbox"
-                                     Height="20"
-                                     Margin="0,14,0,4"
-                                     HorizontalAlignment="Stretch"
-                                     AutomationProperties.AccessibilityView="Raw" >
+                                Height="20"
+                                Margin="0,14,0,4"
+                                HorizontalAlignment="Stretch"
+                                AutomationProperties.AccessibilityView="Raw" >
                                 <ContentPresenter x:Name="Content"
-                                                  Height="20"
-                                                  Content="{TemplateBinding Icon}"
-                                                  Foreground="{TemplateBinding Foreground}"/>
+                                    Height="20"
+                                    Content="{TemplateBinding Icon}"
+                                    Foreground="{TemplateBinding Foreground}"/>
                             </Viewbox>
                             <TextBlock x:Name="TextLabel"
-                                       Grid.Row="1"
-                                       Text="{TemplateBinding Label}"
-                                       Foreground="{TemplateBinding Foreground}"
-                                       FontSize="12"
-                                       FontFamily="{TemplateBinding FontFamily}"
-                                       TextAlignment="Center"
-                                       TextWrapping="Wrap"
-                                       Margin="2,0,2,6"
-                                       AutomationProperties.AccessibilityView="Raw" />
+                                Grid.Row="1"
+                                Text="{TemplateBinding Label}"
+                                Foreground="{TemplateBinding Foreground}"
+                                FontSize="12"
+                                FontFamily="{TemplateBinding FontFamily}"
+                                TextAlignment="Center"
+                                TextWrapping="Wrap"
+                                Margin="2,0,2,6"
+                                AutomationProperties.AccessibilityView="Raw" />
                             <TextBlock x:Name="OverflowTextLabel"
-                                       Text="{TemplateBinding Label}"
-                                       Foreground="{TemplateBinding Foreground}"
-                                       FontSize="15"
-                                       FontFamily="{TemplateBinding FontFamily}"
-                                       TextAlignment="Left"
-                                       TextTrimming="Clip"
-                                       TextWrapping="NoWrap"
-                                       HorizontalAlignment="Stretch"
-                                       VerticalAlignment="Center"
-                                       Margin="12,0,12,0"
-                                       Padding="0,5,0,7"
-                                       Visibility="Collapsed"
-                                       AutomationProperties.AccessibilityView="Raw" />
+                                Text="{TemplateBinding Label}"
+                                Foreground="{TemplateBinding Foreground}"
+                                FontSize="15"
+                                FontFamily="{TemplateBinding FontFamily}"
+                                TextAlignment="Left"
+                                TextTrimming="Clip"
+                                TextWrapping="NoWrap"
+                                HorizontalAlignment="Stretch"
+                                VerticalAlignment="Center"
+                                Margin="12,0,12,0"
+                                Padding="0,5,0,7"
+                                Visibility="Collapsed"
+                                AutomationProperties.AccessibilityView="Raw" />
                         </Grid>
                     </Grid>
                 </ControlTemplate>
