--- a/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
@@ -217,6 +217,7 @@
                     Foreground="DarkGreen"
                     x:Uid="PlayButton"
                     DefaultButton="True"
+                    Style="{StaticResource ForegroundCustomCommandBarButton}"
                     IsEnabled="{x:Bind ViewModel.PlayAvailable, Mode=OneWay, FallbackValue=False}"
                     Click="{x:Bind ViewModel.RequestPlay}"/>
                 <customCommandBar:CustomCommandBarButton
@@ -245,12 +246,14 @@
                     Label="Play"
                     Icon="&#xE102;"
                     Foreground="DarkGreen"
+                    Style="{StaticResource ForegroundCustomCommandBarButton}"
                     x:Uid="PlayButton"
                     IsEnabled="{x:Bind ViewModel.IDECodeAvailable, Mode=OneWay, FallbackValue=False}"
                     Click="{x:Bind ViewModel.RequestPlay}"/>
                 <customCommandBar:CustomCommandBarButton
                     Label="Debug"
                     Icon="&#xEBE8;"
+                    Style="{StaticResource ForegroundCustomCommandBarButton}"
                     Foreground="{StaticResource RedDangerBrush}"
                     x:Uid="DebugButton"
                     IsEnabled="{x:Bind ViewModel.DebugAvailable, Mode=OneWay, FallbackValue=False}"
