Minor UI tweaks

--- a/Brainf_ck-sharp.UWP/UserControls/BottomEdgeInfoBar.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/BottomEdgeInfoBar.xaml
@@ -201,7 +201,8 @@
             IsTextScaleFactorEnabled="False"
             FontWeight="SemiLight"
             Grid.Column="2">
-            <Run Text="Error"/>
+            <Run Text="Error"
+                 x:Uid="ErrorRun"/>
             <Run 
                 Text="12"
                 x:Name="IDEErrorRun"/>
