TitleBar hidden if the app is started in full screen

--- a/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
@@ -52,7 +52,8 @@
             <!--Title placeholder-->
             <Grid 
                 Grid.Row="0"
-                Height="32">
+                Height="32"
+                x:Name="PlaceholderGrid">
                 
                 <!--App title-->
                 <TextBlock
