Locked templates for loaded source codes

--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/LocalSourceCodesBrowserFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/LocalSourceCodesBrowserFlyout.xaml
@@ -36,6 +36,7 @@
                         <DataTemplate>
                             <dataTemplates:SavedSourceCodeTemplate 
                                 CodeInfo="{Binding}"
+                                IsSelected="{Binding IsSelected, FallbackValue=False}"
                                 FavoriteToggleRequested="SavedSourceCodeTemplate_OnFavoriteToggleRequested"
                                 RenameRequested="SavedSourceCodeTemplate_OnRenameRequested"
                                 ShareRequested="SavedSourceCodeTemplate_OnShareRequested"
