--- a/Brainf_ck-sharp.UWP/UserControls/DataTemplates/SavedSourceCodeTemplate.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/DataTemplates/SavedSourceCodeTemplate.xaml
@@ -42,6 +42,7 @@
 
         <!--Light border-->
         <Border
+            x:Name="LightBorder"
             Opacity="0.6"
             BorderThickness="2"
             BorderBrush="{StaticResource BorderLightBrush}"/>
@@ -78,5 +79,10 @@
                    VerticalAlignment="Bottom"
                    Height="1"
                    Fill="#90000000"/>
+        
+        <!--Fade canvas-->
+        <Canvas x:Name="FadeCanvas"
+                Background="#40000000"
+                Opacity="0"/>
     </Grid>
 </UserControl>
