Background execution UI and backend implemented

--- a/Brainf_ck-sharp.UWP/UserControls/BottomEdgeInfoBar.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/BottomEdgeInfoBar.xaml
@@ -176,7 +176,7 @@
                             Value="&#xEB90;"/>
                         <Setter
                             Target="AutorunResultIcon.Foreground"
-                            Value="DarkRed"/>
+                            Value="#FF911500"/>
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
