--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/Settings/Sections/IDESettingsSection.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/Settings/Sections/IDESettingsSection.xaml
@@ -8,6 +8,7 @@
     xmlns:helpers="using:Brainf_ck_sharp_UWP.Helpers"
     xmlns:ideThemes="using:Brainf_ck_sharp_UWP.UserControls.DataTemplates.IDEThemes"
     xmlns:converters="using:Brainf_ck_sharp_UWP.Converters"
+    xmlns:ui="using:Brainf_ck_sharp_UWP.Helpers.UI"
     mc:Ignorable="d"
     d:DesignHeight="800"
     d:DesignWidth="400">
@@ -112,24 +113,24 @@
                 Padding="1,1,0,1"
                 IsHitTestVisible="{Binding ViewModel.ThemesSelectorEnabled, Mode=OneWay, FallbackValue=False}">
                 <inheritedControls:AnimatedComboBox.ItemTemplateSelector>
-                    <helpers:ComboBoxDataTemplateSelector>
-                        <helpers:ComboBoxDataTemplateSelector.SelectedTemplate>
+                    <ui:ComboBoxDataTemplateSelector>
+                        <ui:ComboBoxDataTemplateSelector.SelectedTemplate>
                             <DataTemplate>
                                 <ideThemes:IDEThemePreviewTemplate 
                                     MinWidth="180"
                                     MinHeight="108"
                                     Theme="{Binding}"/>
                             </DataTemplate>
-                        </helpers:ComboBoxDataTemplateSelector.SelectedTemplate>
-                        <helpers:ComboBoxDataTemplateSelector.DropDownTemplate>
+                        </ui:ComboBoxDataTemplateSelector.SelectedTemplate>
+                        <ui:ComboBoxDataTemplateSelector.DropDownTemplate>
                             <DataTemplate>
                                 <ideThemes:IDEThemeDropDownPreviewTemplate 
                                     MinWidth="180"
                                     MinHeight="108"
                                     Theme="{Binding}"/>
                             </DataTemplate>
-                        </helpers:ComboBoxDataTemplateSelector.DropDownTemplate>
-                    </helpers:ComboBoxDataTemplateSelector>
+                        </ui:ComboBoxDataTemplateSelector.DropDownTemplate>
+                    </ui:ComboBoxDataTemplateSelector>
                 </inheritedControls:AnimatedComboBox.ItemTemplateSelector>
             </inheritedControls:AnimatedComboBox>
 
