--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/Sections/PBrainGuideControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/Sections/PBrainGuideControl.xaml
@@ -2,9 +2,9 @@
     x:Class="Brainf_ck_sharp_UWP.UserControls.Flyouts.UserGuide.Sections.PBrainGuideControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Brainf_ck_sharp_UWP.UserControls.Flyouts.UserGuide"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:templates="using:Brainf_ck_sharp_UWP.UserControls.Flyouts.UserGuide.Templates"
     mc:Ignorable="d"
     d:DesignHeight="1000"
     d:DesignWidth="400">
@@ -18,24 +18,24 @@
             x:Uid="GuidePBrain"/>
 
         <!--Operators-->
-        <local:OperatorDescriptionControl
+        <templates:GuideItemDescriptionControl
             Margin="0,16,0,0"
-            Operator="("
+            ItemName="("
             Description="Defines a function and binds it to the value of the current memory cell"
             x:Uid="GuidePBrainOperator1"
-            OperatorForegroundBrush="#FF009191"/>
-        <local:OperatorDescriptionControl
+            ItemNameForegroundBrush="#FF009191"/>
+        <templates:GuideItemDescriptionControl
             Margin="0,12,0,0"
-            Operator=")"
+            ItemName=")"
             Description="Ends the current function definition"
             x:Uid="GuidePBrainOperator2"
-            OperatorForegroundBrush="#FF009191"/>
-        <local:OperatorDescriptionControl
+            ItemNameForegroundBrush="#FF009191"/>
+        <templates:GuideItemDescriptionControl
             Margin="0,12,0,0"
-            Operator=":"
+            ItemName=":"
             Description="Calls the function associated with the value of the current memory cell"
             x:Uid="GuidePBrainOperator3"
-            OperatorForegroundBrush="#FF1E7499"/>
+            ItemNameForegroundBrush="#FF1E7499"/>
 
         <!--Warning-->
         <TextBlock 
