--- a/Brainf_ck-sharp.UWP/UserControls/BottomEdgeInfoBar.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/BottomEdgeInfoBar.xaml
@@ -131,15 +131,15 @@
                 <VisualState x:Name="IDENoPendingChangesState">
                     <VisualState.Setters>
                         <Setter 
-                            Target="IDEChangesPendingIcon.Visibility"
-                            Value="Collapsed"/>
+                            Target="FileBlock.FontWeight"
+                            Value="SemiLight"/>
                     </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="IDEPendingChangesState">
                     <VisualState.Setters>
                         <Setter 
-                            Target="IDEChangesPendingIcon.Visibility"
-                            Value="Visible"/>
+                            Target="FileBlock.FontWeight"
+                            Value="Bold"/>
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
@@ -304,7 +304,6 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <TextBlock 
                 Text="&#xE70B;"
@@ -325,16 +324,6 @@
                 TextTrimming="CharacterEllipsis"
                 FontWeight="SemiLight"
                 MaxLines="1"/>
-            <TextBlock
-                Visibility="Collapsed"
-                x:Name="IDEChangesPendingIcon"
-                Grid.Column="2"
-                Text="&#xE1F5;"
-                FontFamily="Segoe MDL2 Assets"
-                VerticalAlignment="Center"
-                Foreground="#E0FFFFFF"
-                FontSize="14"
-                Margin="8,2,0,0"/>
         </Grid>
         
         <!--Autorun result-->
