--- a/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/Controls/KeyboardButton.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/Controls/KeyboardButton.xaml
@@ -4,12 +4,15 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:inheritedControls="using:Brainf_ck_sharp_UWP.UserControls.InheritedControls"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Button Style="{StaticResource WideButtonWithNoBackgroundStyle}"
-            Click="Button_Clicked">
+    <inheritedControls:ButtonWithFlyoutVisualStates
+        x:Name="RootButton"
+        Style="{StaticResource WideButtonWithNoBackgroundStyle}"
+        Click="Button_Clicked">
         <Grid>
             
             <!--Light background-->
@@ -55,5 +58,5 @@
                     x:Name="InfoBlock"/>
             </StackPanel>
         </Grid>
-    </Button>
+    </inheritedControls:ButtonWithFlyoutVisualStates>
 </UserControl>
