Initial implementation of custom RichEditBox context menu

--- a/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
+++ b/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
@@ -23,6 +23,7 @@
     
     <!--Misc-->
     <SolidColorBrush x:Key="ShellSeparatorLineFillBrush" Color="#FF6E6E6E"/>
+    <SolidColorBrush x:Key="CustomContextMenuBorderBrush" Color="#FF404040"/>
     
     <!--Lights-->
     <SolidColorBrush x:Key="BorderLightBrush"/>
