--- a/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/VirtualArrowsKeyboardControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/VirtualArrowsKeyboardControl.xaml
@@ -12,7 +12,7 @@
     <!--Root-->
     <Grid
         BorderThickness="1"
-        BorderBrush="#FF404040"
+        BorderBrush="{StaticResource CustomContextMenuBorderBrush}"
         Background="{StaticResource InAppGrayAcrylicBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="48"/>
