Clipboard operations implemented in custom context menu

--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/SnippetsMenu/TouchCodeSnippetsBrowserFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/SnippetsMenu/TouchCodeSnippetsBrowserFlyout.xaml
@@ -13,7 +13,7 @@
           BorderThickness="1"
           BorderBrush="{StaticResource CustomContextMenuBorderBrush}">
         <ListView
-            ItemsSource="{x:Bind ViewModel.CodeSnippets, Mode=OneWay}"
+            ItemsSource="{x:Bind ViewModel.CodeSnippets}"
             ItemContainerStyle="{StaticResource ListViewItemWithoutBackgroundVisualStates}"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Stretch"
