--- a/Brainf_ck-sharp.UWP/UserControls/DataTemplates/SavedSourceCodeTemplate.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/DataTemplates/SavedSourceCodeTemplate.xaml
@@ -45,6 +45,7 @@
             x:Name="LightBorder"
             Opacity="0.6"
             BorderThickness="2"
+            Margin="0,0,0,1"
             BorderBrush="{StaticResource BorderLightBrush}"/>
 
         <!--Content-->
