--- a/Brainf_ck-sharp.UWP/UserControls/DataTemplates/SnippetsMenu/CodeSnippetTemplate.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/DataTemplates/SnippetsMenu/CodeSnippetTemplate.xaml
@@ -44,6 +44,7 @@
             x:Name="LightBorder"
             Opacity="0.6"
             BorderThickness="1"
+            Margin="0,0,0,1"
             BorderBrush="{StaticResource BorderLightBrush}"/>
 
         <!--Content-->
@@ -76,6 +77,7 @@
         <Rectangle Grid.Column="0"
                    VerticalAlignment="Bottom"
                    Height="1"
-                   Fill="#90000000"/>
+                   Fill="#90000000"
+                   x:Name="BottomSeparator"/>
     </Grid>
 </UserControl>
